Add base styles structure to the page.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 </head>
 <body>
     <header>
-        <nav>
-            <h1>Color Flipper</h1>
-            <button>Hex</button>
+        <nav class="navbar">
+            <h1 class="nav-item nav-logo">Color Flipper</h1>
+            <button class="nav-item nav-button">Hex</button>
         </nav>
     </header>
 
-    <main>
-        <h2>Background Color: <span>Black</span></h2>
+    <main class="main-container">
+        <h2 class="main-textbox">Background Color: <span class="color-text">Black</span></h2>
+        <button class="color-button">Click Me</button>
     </main>
 
 </body>
