Add transitions to the main button and give the code some tidying by means of variables and alphabetical ordering lines of code.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
 
     <main class="main-container">
-        <h2 class="main-textbox">Background Color: <span class="color-text">Black</span></h2>
-        <button class="color-button">Click Me</button>
+        <h2 class="main-textbox">Background Color: <span class="color-text">#DAD8D4</span></h2>
+        <button class="color-button">CLICK ME</button>
     </main>
 
 </body>
