--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar">
+        <nav id="navbar">
             <h1 class="nav-item nav-logo">Color Flipper</h1>
-            <button class="nav-item nav-button">Hex</button>
+            <button class="nav-item nav-button" type="button" onclick="myFunction_set()">Hex</button>
         </nav>
     </header>
 
@@ -19,5 +19,6 @@
         <button class="color-button">CLICK ME</button>
     </main>
 
+    <script src="main.js"></script>
 </body>
 </html>
